2007-03-27  Mark Wielaard  <mark@klomp.org>

	* configure.ac: Pass on host, build and prefix to libunwind-i386
	configure (and add FIXME).

2007-03-22  Nurdin Premji  <npremj@redhat.com>

	* bootstrap.sh: Create dummy libunwind-i386 directory.
	* .cvsignore: Add libunwind-i386.
	* Makefile.am: Remove dummy multilib target.
	(SUB_DIRS): Add libunwind-i386	

2007-03-22  Nurdin Premji  <npremji@redhat.com>

	* Makefile.am: Enable building of libunwind-i386.

2007-03-22  Stepan Kasal  <skasal@redhat.com>

	* configure.ac: Enable libunwind-i386.

2007-03-21  Nurdin Premji  <npremji@redhat.com>

	* configure.ac: Disable libunwind-i386.
	* Makefile.am: Ditto.

	* configure.ac: Add libunwind-i386 directory.

2007-03-14  Nurdin Premji  <npremji@redhat.com>

	* Makefile.am (GEN_GCJ_LDADD): Fixed libunwind-cpu.h location
	* bootstrap.sh: Run automake in libunwind directory.

2007-02-13  Phil Muldoon  <pmuldoon@redhat.com>

	* Makefile.am (EXTRA_DIST): Add test-core-mt-fp core file.

2007-02-06  Stepan Kasal  <skasal@redhat.com>

	* Makefile.am (noinst_HEADERS): Add include/frysk-asm.h.
	(noinstdir): Nuke.

	* bootstrap.sh: Add "set -e".

2007-01-09  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (frysk/pkgdatadir/helloworld.o)
	(frysk/pkgdatadir/test-core): Delete rules, now generated by
	common/Makefile.gen.sh.
	(pkgdata_DATA): Do not add frysk/pkgdatadir/test-core or
	frysk/pkgdatadir/helloworld.o.
	(CLEANFILES): Ditto.

2006-12-19  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (frysk/pkglibdir/fsystest): Delete rule, moved to
	Makefile.gen.sh.

2006-12-18  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (pkglib_SCRIPTS): Add frysk/pkglibdir/fsystest.
	(frysk/pkglibdir/fsystest): New rule.

2006-12-15  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (SUBDIRS, CHECK_SUBDIRS): Remove libunwind from
	check list.  Partially re-instate code lost in 2006-12-08 changes.
	(check-recursive): Add.

2006-12-11  Andrew Cagney  <cagney@redhat.com>
