@@ -1,3 +1,7 @@
+2007-04-04  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	* bootstrap.sh (libunwind): Support a full autogenerated files removal.
+
 2007-03-27  Mark Wielaard  <mark@klomp.org>
 
 	* configure.ac: Pass on host, build and prefix to libunwind-i386
